# hexlet-vacancy-analysis

./: .gitignore  Makefile  error.html  pyproject.toml  test_fixtures.sh
app/: settings.py  urls.py
backend_django/: __db.sqlite3  db.sqlite3
backend_django/config/: __init__.py  asgi.py  settings.py  urls.py  views.py  wsgi.py
backend_django/templates/: base.html  index.html  login.html  register_user.html
backend_django/users/: authentication.py  forms.py  mail.py  models.py  registration.py  urls.py  utils.py  views.py
backend_django/users/logic/: authentication.py  mail.py  registration.py
backend_django/users/migrations/: 0001_initial.py  0002_user_created_at.py
