[tool.poetry]
name = "hexlet-vacancy-analysis"
version = "0.1.0"
description = ""
authors = ["Dmitriy G. <llogginn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.2.1"
requests = "^2.32.3"
python-dotenv = "^1.1.0"
django-bootstrap5 = "^25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
